K8's/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web-app-deployment
  labels:
    app: python-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-web-app
  template:
    metadata:
      labels:
        app: python-web-app
    spec:
      containers:
      - name: python-web-app
        image: python-web-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
