K8's/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-web-app-service
spec:
  selector:
    app: python-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
