K8's/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sretest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-web-app-service
            port:
              number: 80
